feat: setup next.js & api feed & interfaces

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "type-check": "tsc"
+    "start": "next start"
   },
   "dependencies": {
     "next": "latest",
