feat: added container, reset, variables, mediaquery css && card, card-wrapper, header components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       "@components/*": ["components/*"],
       "@data/*": ["data/*"],
       "@interfaces/*": ["interfaces/*"],
-      "@pages/*": ["pages/*"]
+      "@pages/*": ["pages/*"],
+      "@styles/*": ["styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
