--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.7"
+    "react-query": "^3.34.7",
+    "sass": "^1.45.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
