--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icomoon": "^2.4.2",
     "react-query": "^3.34.7",
     "sass": "^1.45.1"
   },
